[gd_scene load_steps=31 format=3 uid="uid://rqi1fct1t2dq"]

[ext_resource type="Script" path="res://How To Play.gd" id="1_ygg8e"]
[ext_resource type="Texture2D" uid="uid://chxyxs7hlkime" path="res://Menu Assets/Clownmenu1.png" id="2_5f6tv"]
[ext_resource type="Texture2D" uid="uid://cfig4dkdxs0k" path="res://Left Normal.png" id="3_aypi6"]
[ext_resource type="Texture2D" uid="uid://cyh0u57uswsn1" path="res://Clown Girl.png" id="3_rtpcr"]
[ext_resource type="Texture2D" uid="uid://dpdoj0ynk86iq" path="res://Right Normal.png" id="4_cj8a0"]
[ext_resource type="Texture2D" uid="uid://cvp21xr46tfcl" path="res://Kid Assets/CryingKid2.png" id="4_pyau6"]
[ext_resource type="Texture2D" uid="uid://c6bgekpasu4hm" path="res://Menu Assets/BalloonRed.png" id="5_slfq4"]
[ext_resource type="Texture2D" uid="uid://fooq0f45rpaq" path="res://Menu Assets/BalloonBlue.png" id="6_4rocu"]
[ext_resource type="Texture2D" uid="uid://cdabwyjybiupw" path="res://Menu Assets/BalloonWhite.png" id="7_i00jk"]
[ext_resource type="Texture2D" uid="uid://bjbljchhx23gy" path="res://Menu Assets/HUD1.png" id="8_h2sy5"]
[ext_resource type="Texture2D" uid="uid://dx517dksv1481" path="res://Left Press.png" id="9_7oenx"]
[ext_resource type="FontFile" uid="uid://mn642hb1nsw5" path="res://Sancreek-Regular.ttf" id="9_bjm7v"]
[ext_resource type="Texture2D" uid="uid://1vdell0wdci5" path="res://Left Hover.png" id="10_7rrsf"]
[ext_resource type="FontFile" uid="uid://mn642hb1nsw5" path="res://Menu Assets/Sancreek-Regular.ttf" id="10_8fjol"]
[ext_resource type="Texture2D" uid="uid://0bmyc760j5pp" path="res://Left Disabled.png" id="11_8digh"]
[ext_resource type="Texture2D" uid="uid://tkb6v5433alu" path="res://Right Press.png" id="13_r5rry"]
[ext_resource type="Texture2D" uid="uid://jnrkuvwlt6fv" path="res://Right Hover.png" id="14_msa0p"]
[ext_resource type="Texture2D" uid="uid://dyo2sxr2hlqum" path="res://Right Disabled.png" id="15_nmd3n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m4px6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0ci3"]
bg_color = Color(0.470588, 0.466667, 0.882353, 1)
border_width_left = 7
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lgo1t"]

[sub_resource type="LabelSettings" id="LabelSettings_i2b6c"]
font = ExtResource("9_bjm7v")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_rojlg"]
font = ExtResource("10_8fjol")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_n4nrd"]
font = ExtResource("9_bjm7v")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_lj0yv"]
font = ExtResource("10_8fjol")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_v4gv1"]
font = ExtResource("10_8fjol")
font_size = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_okbyq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j1jjw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjlsk"]
bg_color = Color(0.290196, 0.431373, 0.929412, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_heon2"]

[node name="How To Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ygg8e")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_5f6tv")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 128.0
offset_right = 368.0
offset_bottom = 576.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -224.0
offset_right = 384.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_m4px6")

[node name="Panel" type="Panel" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.0
offset_top = -288.0
offset_right = 528.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x0ci3")

[node name="GameplayImg" type="TextureRect" parent="Control/Panel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -352.0
offset_right = 512.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rtpcr")
expand_mode = 1
stretch_mode = 5

[node name="GameplayImg2" type="TextureRect" parent="Control/Panel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -326.0
offset_right = 163.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_pyau6")
expand_mode = 1

[node name="GameplayImg3" type="TextureRect" parent="Control/Panel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -271.0
offset_right = 384.0
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_slfq4")
expand_mode = 1

[node name="GameplayImg4" type="TextureRect" parent="Control/Panel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -296.0
offset_right = 368.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_4rocu")
expand_mode = 1

[node name="GameplayImg5" type="TextureRect" parent="Control/Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -296.0
offset_right = 368.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_i00jk")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("8_h2sy5")

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -464.0
offset_top = -280.0
offset_right = 464.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="TxtHold" type="Panel" parent="Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -64.0
offset_right = 308.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lgo1t")

[node name="HelpTxt" type="Label" parent="Control2/TxtHold"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -44.0
offset_right = 344.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Help Ms.Clown cheer up the crying kids!"
label_settings = SubResource("LabelSettings_i2b6c")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="HelpTxt2" type="Label" parent="Control2/TxtHold"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -44.0
offset_right = 344.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Make it to the kids to turn those frowns upside down!"
label_settings = SubResource("LabelSettings_rojlg")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="HelpTxt3" type="Label" parent="Control2/TxtHold"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -44.0
offset_right = 344.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Red Balloons let you float over gaps!"
label_settings = SubResource("LabelSettings_n4nrd")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="HelpTxt4" type="Label" parent="Control2/TxtHold"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -44.0
offset_right = 344.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Blue balloons let you walk over lava and put out fire!"
label_settings = SubResource("LabelSettings_lj0yv")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="HelpTxt5" type="Label" parent="Control2/TxtHold"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -44.0
offset_right = 344.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "White balloons let you freeze and walk on water!"
label_settings = SubResource("LabelSettings_v4gv1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="LButHold" type="Panel" parent="Control2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 64.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_okbyq")

[node name="LeftBut" type="TextureButton" parent="Control2/LButHold"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -64.0
offset_right = 48.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
texture_normal = ExtResource("3_aypi6")
texture_pressed = ExtResource("9_7oenx")
texture_hover = ExtResource("10_7rrsf")
texture_disabled = ExtResource("11_8digh")
ignore_texture_size = true
stretch_mode = 5

[node name="RButHold" type="Panel" parent="Control2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -120.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_j1jjw")

[node name="RightBut" type="TextureButton" parent="Control2/RButHold"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -60.0
offset_right = 16.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_cj8a0")
texture_pressed = ExtResource("13_r5rry")
texture_hover = ExtResource("14_msa0p")
texture_disabled = ExtResource("15_nmd3n")
ignore_texture_size = true
stretch_mode = 5

[node name="Control3" type="Control" parent="."]
anchors_preset = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 128.0
offset_bottom = 72.0

[node name="Panel" type="Panel" parent="Control3"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 48.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xjlsk")

[node name="Back But" type="Button" parent="Control3/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -24.0
offset_right = 56.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_heon2")
text = "Back to Title"

[connection signal="pressed" from="Control2/LButHold/LeftBut" to="." method="_on_left_but_pressed"]
[connection signal="pressed" from="Control2/RButHold/RightBut" to="." method="_on_right_but_pressed"]
[connection signal="pressed" from="Control3/Panel/Back But" to="." method="_on_back_but_pressed"]
